Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14518 closed bug (fixed)

Webpositive does not respect system colors for URL text

Reported by: cb88 Owned by: pulkomandy
Priority: normal Milestone: R1/beta2
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I've attached as screenshot of this.

Most of the rest of the sytem adjusts fine to setting dark colors. URL bar in Webpositive and Tracker but that's a separete issue.

Attachments (1)

URLBarDarkColors.png (82.8 KB ) - added by cb88 6 years ago.

Download all attachments as: .zip

Change History (8)

by cb88, 6 years ago

Attachment: URLBarDarkColors.png added

comment:1 by Janus, 6 years ago

IIRC the url uses the LIST colors have you change those?

comment:2 by cb88, 6 years ago

Yep list Item text is set to green... so it isn't using that.

comment:3 by Janus, 6 years ago

The LIST Colors are used for the suggestions list. As I can see the background color is from the DOCUMENT BACKGROUND COLOR but the Text color black is probably fix.

Last edited 6 years ago by Janus (previous) (diff)

comment:4 by cb88, 6 years ago

Actually the url text appears to be two different colors if that helps any. With the hostname being black and the rest of the text being gray. And yes they do seemed to be fixed.

Last edited 6 years ago by cb88 (previous) (diff)

comment:5 by Janus, 6 years ago

URLInputGroup.cpp

URLInputGroup::URLTextView::InsertText

[...]

	const rgb_color black = (rgb_color) { 0, 0, 0, 255 };
	const rgb_color gray = (rgb_color) { 60, 60, 60, 255 };

comment:6 by Janus, 6 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev52385

comment:7 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.