WebPositive: uses system colors for url text

* Fixes #14518

Change-Id: I76f33694d318e93c096ecab24a9b0316eacda68e
Reviewed-on: https://review.haiku-os.org/613
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>
Reviewed-by: Skipp_OSX <jscipione@gmail.com>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>